--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -274,13 +274,16 @@ function postComment(submitButton) {
     // FIXME: so terribly dirty, need to figure out a way to utilize KO binding to get rid of this ugliness
     var popoverTarget = $(parentForm).parent().parent().parent().find('.comment-popover');
     console.debug(popoverTarget);
-    var targetActionId = $(popoverTarget).attr("data-target-id");
+    var targetId = $(popoverTarget).attr("data-target-id");
     console.debug("target action id: " + targetActionId);
-    var targetActionIdInput = $(parentForm).find(':input[name="target_action_id"]');
-    targetActionIdInput.val(targetActionId);
-    console.debug(targetActionId);
-    var data = $(parentForm).serialize();
-    console.debug(data);
+    var targetIdInput = $(parentForm).find(':input[name="target_id"]');
+    targetIdInput.val(targetId);
+    var formData = $(parentForm).serialize();
+    $.post('/lighterprints/api/comment', formData, function(response) {
+        if (response.success) {
+            var viewModel = response.viewModel;
+        }
+    });
     // send the data to the comment api
     return false;
 }
@@ -319,11 +322,13 @@ $(function() {
     viewModel.activateDashboardTab = activateTabFunctor('#dashboard');
     viewModel.activateHelpTab = activateTabFunctor('#help');
     viewModel.activateTeamTab = activateTabFunctor('#team');
-    viewModel.addComment = function(targetModel) {
-        // FIXME: could try setting up the bootstrap popover here and manually applying the bindings to it to get rid of
-        // hackiness of postComment global
-        console.debug("adding comment to target");
-        console.debug(targetModel);
+    viewModel.postComment = function(targetModel) {
+        var formData = $('#commentForm' + targetModel.pk()).serialize();
+        $.post('/lighterprints/api/comment', formData, function(response) {
+            if (response.success) {
+                ko.mapping.fromJSON(response.viewModel, viewModel);
+            }
+        });
     };
     viewModel.like = function(targetModel) {
         // FIXME: if targetModel.likes already contains this participant's pgr.pk, don't allow for this again
@@ -371,30 +376,22 @@ $(function() {
     ko.applyBindings(viewModel);
     // FIXME: use $('.popover').popover() if we end up having a lot more of these.
     $('#score-info').popover();
-    // FIXME: figure out how to get KO binding to work here
-    $('.comment-popover').popover({
-        html: true,
-        content: function() {
-            return $('#commentPopoverForm').html();
-        }
-    });
 });
 </script>
 <!-- bootstrap popover templates -->
 <script type='text/html' id='commentPopoverForm'>
-<form action='#'>
+<form data-bind='attr: { id: "commentForm" + pk() }'>
 <textarea name='comment' rows='3'></textarea>
 <input type='hidden' name='participant_group_id' value='{{participant_group_relationship.pk}}' />
-<input type='hidden' name='target_action_id' />
-<a class='btn btn-lighterprints-blue' onclick='postComment(this)'>POST</button> <a style='position: relative; left: 8px; top: 5px;' href='javascript:void(0)' class='lighterprints-gray' onclick='dismissCommentPopover()'>Cancel</a>
+<input type='hidden' name='target_id' data-bind='value: pk()' />
+<a class='btn btn-lighterprints-blue' data-bind='click: $root.postComment'>POST</button> <a style='position: relative; left: 8px; top: 5px;' href='javascript:void(0)' class='lighterprints-gray' data-bind='click: $root.closeCommentPopover' >Cancel</a>
 </form>
 </script>
 <!-- knockout templates -->
 <script type='text/html' id='likeCommentTemplate'>
-<a class='comment comment-popover' href='#' rel="popover" data-placement="left" data-html="true" data-bind='click: $root.addComment, attr: { "data-title": "Reply to " + participant_name(), "data-target-id": pk() }'>
+<a class='comment comment-popover' href='javascript:void(0)' rel="popover" data-placement='left' data-bind='popover: { content: "#commentPopoverForm", id: pk()}'>
 <i class='comment lighterprints-gray icon-comment'></i>
 </a>
-
 <span data-bind='ifnot: liked'>
 <a href='#' data-bind='click: $root.like'>
 <i class='like lighterprints-gray icon-heart'></i>
