--- a/vcweb/static/css/lighterprints/style.css
+++ b/vcweb/static/css/lighterprints/style.css
@@ -118,7 +118,7 @@ h3.popover-title {
 .lighterprints-gray {
     color: #D0D0D0;
 }
-.comment:hover {
+.comment:hover, .commented {
     color: #13a5e6;
     text-decoration: none;
 }
