--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.min.css">
 <link rel='stylesheet' href='{{STATIC_URL}}bootstrap/css/font-awesome.min.css'>
 <link rel="stylesheet" href="{{STATIC_URL}}css/style.css" media="screen" />
-<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 {% endblock %}
 </head>
 <body>
