get_all_team_activity still returns a tuple for the moment

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -225,7 +225,7 @@
     aria-labelledby='activityPerformedModalLabel'
     aria-hidden='true'>
     <div class='modal-header'>
-        <h3 id='activityPerformedModalLabel'>Challenge Completed</h3>
+        <h3 id='activityPerformedModalLabel'>Performing Challenge...</h3>
     </div>
     <div class='modal-body'>
         <div class="progress progress-striped active">
@@ -243,7 +243,7 @@
         </div>
     </div>
     <div class='modal-footer'>
-        <button class='btn disabled' data-dismiss='modal' aria-hidden='true'>Continue</button>
+        <button class='btn btn-primary disabled' data-dismiss='modal' aria-hidden='true'>Continue</button>
     </div>
 </div>
 {% endblock content %}
