updating group summary email creation, still need to tweak templates

--- a/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
@@ -1,4 +1,4 @@
-Lighter Footprints Summary for {{ date }}
+Lighter Footprints Summary for {{ summary_date }}
 
 * You are a member of {{ team_name }}.
 * You earned {{ individual_points }} while the average in your group was {{ average_group_points }}.
