--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -477,7 +477,8 @@ $(function() {
             <span data-bind='if: expired'>Expired <i class='icon-warning-sign'></i></span>
             <span data-bind='if: upcoming'>Not yet available <i class='icon-time'></i></span>
             <span data-bind='if: locked'>Locked <i class='icon-lock'></i></span>
-            </a> <small><a href='#'>Learn more</a></small>
+            </a> 
+            <small><a href='#'>Learn more</a></small>
         </form>
     </div>
     <div style='padding: 15px 0;' class='span2'>
