--- a/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
@@ -1,18 +1,20 @@
-Lighter Footprints Summary for {{ summary_date }}
-
-* You are a member of {{ team_name }}.
-* You earned {{ individual_points }} while the average in your group was {{ average_group_points }}.
-* {{ number_of_chat_messages }} chat messages were posted by your group.
-
+<h3>Lighter Footprints Summary for {{ summary_date }}</h3>
+<p>
+You are a member of {{ group_name }}.
+</p>
+<ul>
+    <li>You earned {{ individual_points }} while the average in your group was {{ average_group_points }}.</li>
+    <li>{{ number_of_chat_messages }} chat messages were posted by your group.</li>
+</ul>
+<hr>
+<p>
 {% if completed %}
 Congratulations!  Your group has finished Level 3 and completed the experiment.
 {% elif promoted %}
-Congratulations!  Your group was promoted to Level {{ group_level }}.  To be promoted to the next level your group must
-earn {{ points_to_next_level }} today.
+Congratulations!  Your group was promoted to Level {{ group_level }}.  In order to be promoted to the next level your group must
+earn {{ points_to_next_level }} points today.
 {% else %}
-Your group is still at Level {{ group_level }}.  In order to be promoted to the next level your group must earn
-{{ points_to_next_level }} today.
+Your group is currently Level {{ group_level }}.  In order to be promoted to the next level your group must earn
+{{ points_to_next_level }} points today.
 {% endif %}
-
-
-
+</p>
