--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -9,7 +9,7 @@
     <li><a class='brand'><img alt='footprint logo' src='{{STATIC_URL}}/images/lighterprints/logo.png' width="25" height="25"> lighter<strong class='lighterprints-green'>footprints</strong></a></li>
     <li class='active'><a href='#dashboard' data-toggle='tab'><i class='icon-dashboard'></i> Dashboard</a></li>
     <li><a href='#challenges' data-toggle='tab'><i class='icon-star-empty'></i> Challenges</a></li>
-    <li><a href='#team' data-toggle='tab'><i class='icon-comments-alt'></i> My Team</a></li>
+    <li><a href='#group' data-toggle='tab'><i class='icon-comments-alt'></i> My Group</a></li>
     <li><a href='#help' data-toggle='tab'><i class='icon-question-sign'></i> Help</a></li>
 </ul>
 {% endblock %}
@@ -19,7 +19,7 @@
 <div class='tabbable'>
     <div class='tab-content'>
         <div class='tab-pane active' id='dashboard'>
-            <h1 class='header'><i class='icon-dashboard'></i> Team Dashboard</h1>
+            <h1 class='header'><i class='icon-dashboard'></i> Group Dashboard</h1>
             <!-- FIXME: re-enable this at some point
             <div data-bind='if: firstVisit()'>
             -->
@@ -33,7 +33,7 @@
                 </p>
                 <p>
                     <i class='lighterprints-green icon-leaf'></i> Earn <span class='badge badge-lighterprints-green'>green points</span> by
-                    completing challenges.  Rank up by <b>increasing your team's average score.</b>.
+                    completing challenges.  Rank up by <b>increasing your group's average score.</b>.
                 </p>
                 <p>
                     <i class='icon-star text-gold'></i> Some challenges are unlocked all day, and others are only
@@ -50,7 +50,7 @@
             <div class='row lighterprints-scoreboard'>
                 <div class='span2'>
                     <h5><span class='lighterprints-scoreboard-uppercase'>Today's Score</span>
-                        <i id='score-info' style='margin:8px 0 0 0;' rel='popover' data-trigger='hover' data-placement='top' data-content="This is your team's average score for the day.  Complete high-value challenges to rank your team up." class='pull-right icon-info-sign'></i></h5>
+                        <i id='score-info' style='margin:8px 0 0 0;' rel='popover' data-trigger='hover' data-placement='top' data-content="This is your group's average score for the day.  Complete high-value challenges to rank your group up." class='pull-right icon-info-sign'></i></h5>
                     <table>
                         <tr>
                             <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: averagePoints'></span></td>
@@ -136,9 +136,8 @@
             <h4>How to participate</h4>
             <p>
             To participate, simply click on the <a href='#challenges' data-bind='click: activateChallengesTab'>Challenges tab</a>, and select a challenge you'd like to perform.
-            You can also leave messages for your other teammates in the 
-            <a href='#team' data-bind='click: activateTeamTab'>My Team tab</a> or visit the 
-            <a href='#dashboard' data-bind='click:activateDashboardTab'>Dashboard</a> to view your team's progress.
+            You can leave messages for the other members n your group via the <a href='#group' data-bind='click: activateGroupTab'>My Group tab</a> 
+            or use the <a href='#dashboard' data-bind='click:activateDashboardTab'>Dashboard</a> to view your group's progress.
             </p>
             <h3 class='underline'>Frequently Asked Questions</h3>
             <div class='well alert-white'>
@@ -161,9 +160,9 @@
                 </p>
             </div>
         </div>
-        <div class='tab-pane' id='team'>
-            <h1 class='header'><i class='icon-comment'></i> My Team</h1>
-            <h3 class='underline'>Team Chat</h3>
+        <div class='tab-pane' id='group'>
+            <h1 class='header'><i class='icon-comment'></i> My Group</h1>
+            <h3 class='underline'>Group Chat</h3>
             <form class='form-inline' id='chat-form' data-bind='submit: submitChatMessage'>
                 <div style='width: 90%;' class='input-prepend'>
                     <span class='add-on'><i class='icon-comment'></i></span>
@@ -197,7 +196,7 @@
                     </div>
                 </div>
             </div>
-            <h3 class='underline'>Team activity</h3>
+            <h3 class='underline'>Group activity</h3>
             <table class='table'>
                 <tbody data-bind='template: { name: groupActivityTemplate, foreach: teamActivity() }'>
                 </tbody>
@@ -254,7 +253,7 @@
     <li><strong>#<span data-bind='text:$index() + 1'></span></strong> <span data-bind='css: { "bold lighterprints-blue": groupName() == $root.groupName()}'><span data-bind='text: groupName'></span></span><span class='pull-right badge badge-lighterprints-green' data-bind='text: averagePoints'></span></li> 
     <li class='divider'></li>
 </ul>
-<h3 class='lighterprints-sidebar-header'><i class='lighterprints-blue icon-group'></i> Team Activity <span class='pull-right'><small><a href='#team' data-bind='click: activateTeamTab' data-toggle='tab'>View all</a></small></span></h3>
+<h3 class='lighterprints-sidebar-header'><i class='lighterprints-blue icon-group'></i> Group Activity <span class='pull-right'><small><a href='#group' data-bind='click: activateGroupTab' data-toggle='tab'>View all</a></small></span></h3>
 <table class='table'>
     <tbody data-bind='template: { name: groupActivityTemplate, foreach: groupActivity.slice(0, 6) }'>
     </tbody>
@@ -265,7 +264,7 @@
 <ul class='nav-footer'>
     <li><a href='#dashboard' data-bind='click: activateDashboardTab' data-toggle='tab'>Dashboard</a></li>
     <li><a href='#challenges' data-bind='click: activateChallengesTab' data-toggle='tab'>Challenges</a></li>
-    <li><a href='#team' data-bind='click: activateTeamTab' data-toggle='tab'>My Team</a></li>
+    <li><a href='#group' data-bind='click: activateGroupTab' data-toggle='tab'>My Group</a></li>
     <li><a href='#help' data-bind='click: activateHelpTab' data-toggle='tab'>Help</a></li>
     <li class='pull-right'><a>&copy; {% now "Y" %} Arizona Board of Regents</a></li>
 </ul>
@@ -301,7 +300,7 @@ $(function() {
     viewModel.activateChallengesTab = activateTabFunctor('#challenges');
     viewModel.activateDashboardTab = activateTabFunctor('#dashboard');
     viewModel.activateHelpTab = activateTabFunctor('#help');
-    viewModel.activateTeamTab = activateTabFunctor('#team');
+    viewModel.activateGroupTab = activateTabFunctor('#group');
     viewModel.postComment = function(targetModel) {
         var formData = $('#commentForm' + targetModel.pk()).serialize();
         $('.comment-popover').popover('hide');
