adding d3js dependency, squishing today's progress numbers (not a great solution) and fixing a bug in the group summary email

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -128,6 +128,7 @@
         <script type='text/javascript' src='{{STATIC_URL}}js/ko/knockout.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/ko/knockout.mapping.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/common.js'></script>
+        <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/d3/3.0.1/d3.v3.min.js'></script>
         {% if debug_mode %}
         {% load dajaxice_templatetags %}
         {% dajaxice_js_import %}
