fixing comment icon

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -390,7 +390,7 @@ $(function() {
 </script>
 <script type='text/html' id='comment'>
     <tr data-bind='if: $root.participantGroupId() != participant_group_id()'>
-        <td style='vertical-align: top'><i class='icon-heart lighterprints-red'></i></td>
+        <td style='vertical-align: top'><i class='icon-comment lighterprints-blue'></i></td>
         <td>
             <strong data-bind='text: participant_name'></strong>
             <small class='pull-right muted'><span data-bind='text: date_created'></span></small>
