--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -399,7 +399,7 @@ $(function() {
             commented on your completed challenge, <em data-bind='text: target_data_value'></em>
             </span>
             <span data-bind='if: target.parameter_name() === "chat_message" || target.parameter_name() === "comment"'>
-            replied to your message, &quot;<em data-bind='text: target.message'></em>&quot;
+            replied to your message, &quot;<em data-bind='text: target_data_value'></em>&quot;
             </span>
             <div>
             <small><i class='icon-quote-left'></i></small>
