--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -400,10 +400,10 @@ $(function() {
             <strong data-bind='text: participant_name'></strong>
             <small class='pull-right muted'><span data-bind='text: date_created'></span></small>
             <div>
-            <span data-bind='if: target.parameter_name() === "activity_performed"'>
+            <span data-bind='if: target_parameter_name() === "activity_performed"'>
             commented on your completed challenge, <em data-bind='text: target_data_value'></em>
             </span>
-            <span data-bind='if: target.parameter_name() === "chat_message" || target.parameter_name() === "comment"'>
+            <span data-bind='if: target_parameter_name() === "chat_message" || target_parameter_name() === "comment"'>
             replied to your message, &quot;<em data-bind='text: target_data_value'></em>&quot;
             </span>
             <div>
@@ -423,10 +423,10 @@ $(function() {
         <strong data-bind='text: participant_name'></strong>
         <small class='pull-right muted'><span data-bind='text: date_created'></span></small>
         <div>liked your
-            <span data-bind='if: target.parameter_name() === "activity_performed"'>
+            <span data-bind='if: target_parameter_name() === "activity_performed"'>
             completed challenge, <em data-bind='text: target_data_value'></em>
             </span>
-            <span data-bind='if: target.parameter_name() === "chat_message" || target.parameter_name() === "comment"'>
+            <span data-bind='if: target_parameter_name() === "chat_message" || target_parameter_name() === "comment"'>
             message, &quot;<em data-bind='text: target_data_value'></em>&quot;
             </span>
         </div>
