--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class='span2 left-divider'>
                     <h5><span class='lighterprints-scoreboard-uppercase'>Time Remaining</span></h5>
-                    <div class='lighterprints-scoreboard-xlarge'><span data-bind='text:hoursLeft'></span>h <span data-bind='text:minutesLeft'></span>m</div>
+                    <div class='lighterprints-scoreboard-xlarge'><span data-bind='text:hoursLeft'></span>:<span data-bind='text:minutesLeft'></span></div>
                 </div>
             </div>
             <h3 class='underline'>Challenges</h3>
