--- a/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/group-summary-email.html
@@ -3,7 +3,7 @@
 You are a member of {{ group_name }}.
 </p>
 <ul>
-    <li>You earned {{ individual_points }} while the average in your group was {{ average_group_points }}.</li>
+    <li>You earned {{ individual_points }} points while the average in your group was {{ average_group_points }} point(s).</li>
     <li>{{ number_of_chat_messages }} chat messages were posted by your group.</li>
 </ul>
 <hr>
