--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -1,12 +1,13 @@
 {% extends "participant/base.html" %}
+{% load static from staticfiles %}
 {% block head %}
 {{ block.super }}
-<link rel='stylesheet' href='{{STATIC_URL}}/css/lighterprints/style.css'/>
+<link rel='stylesheet' href='{% static "css/lighterprints/style.css" %}'/>
 <link rel="stylesheet" href="//fast.fonts.com/cssapi/e86344be-530a-495b-be28-7a22a9cda219.css"/>
 {% endblock %}
 {% block headerlinks %}
 <ul class='nav nav-tabs' id='lfp-navtabs'>
-    <li><a class='brand'><img alt='footprint logo' src='{{STATIC_URL}}/images/lighterprints/logo.png' width="25" height="25"> lighter<strong class='lighterprints-green'>footprints</strong></a></li>
+    <li><a class='brand'><img alt='footprint logo' src='{% static "images/lighterprints/logo.png"%}' width="25" height="25"> lighter<strong class='lighterprints-green'>footprints</strong></a></li>
     <li class='active'><a href='#dashboard' data-toggle='tab'><i class='icon-dashboard'></i> Dashboard</a></li>
     <li><a href='#challenges' data-toggle='tab'><i class='icon-star-empty'></i> Challenges</a></li>
     <li><a href='#group' data-toggle='tab'><i class='icon-comments-alt'></i> My Group</a></li>
@@ -60,7 +61,7 @@
                 </div>
                 <div class='span2 left-divider'>
                     <h5><span class='lighterprints-scoreboard-uppercase'>Current Level</span></h5>
-                    <h1><img class='group-level' width="104" height="65" data-bind="attr: { src: '{{STATIC_URL}}/images/lighterprints/rank' + groupLevel() + '.png' }"></h1> <br>
+                    <h1><img class='group-level' width="104" height="65" data-bind="attr: { src: '{% static "images/lighterprints/rank"%}' + groupLevel() + '.png' }"></h1> <br>
                 </div>
                 <div class='span2 left-divider'>
                     <h5><span class='lighterprints-scoreboard-uppercase'>Today's Progress</span></h5>
@@ -237,7 +238,7 @@
         </div>
         <div id='activityPerformedModalText' data-bind='with: lastPerformedActivity' class='hide'>
             <div class='row-fluid pagination-centered'>
-                <img data-bind='attr: {src: "{{STATIC_URL}}/images/lighterprints/badges/" + name() + ".png" }'>
+                <img data-bind='attr: {src: "{% static 'images/lighterprints/badges/'%}" + name() + ".png" }'>
             </div>
             <h3>You completed a challenge!</h3>
             <p>
@@ -275,12 +276,12 @@
 </ul>
 {% endblock footerlinks %}
 {% block footerlogo %}
-<div class='footer-logo'><img alt='footprint logo' src='{{STATIC_URL}}/images/lighterprints/logo.png' width="25" height="25"> <span style='font-size: 1.5em;'>lighter<strong>footprints</strong></span></div>
+<div class='footer-logo'><img alt='footprint logo' src='{% static "images/lighterprints/logo.png"%}' width="25" height="25"> <span style='font-size: 1.5em;'>lighter<strong>footprints</strong></span></div>
 {% endblock footerlogo %}
 {% block javascript %}
 {{ block.super }}
 <script src="//fast.fonts.com/jsapi/e86344be-530a-495b-be28-7a22a9cda219.js"></script>
-<script src='{{STATIC_URL}}js/lighterprints/model.js'></script>
+<script src='{% static "js/lighterprints/model.js" %}'></script>
 <script>
 $(function() {
     // XXX: set up bootstrap nav-tabs to be semi-refresh friendly, remove in production
@@ -465,7 +466,7 @@ $(function() {
 <div data-bind='foreach: challenges'>
 <div class='row challenge-row'>
     <div class='span2'>
-        <img style='padding: 10px 0 0 20px;' data-bind='attr: {src: "{{STATIC_URL}}/images/lighterprints/badges/" + name() + ".png" }'>
+        <img style='padding: 10px 0 0 20px;' data-bind='attr: {src: "{% static 'images/lighterprints/badges/' %}" + name() + ".png" }'>
     </div>
     <div class='span4'>
         <h4 data-bind='css: status, text:display_name'></h4>
