--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -39,7 +39,7 @@
                 <option value='REGULAR'>Actual round</option>
             </select>
             <label class='checkbox'>
-                <input type='checkbox' data-bind='click: toggleChat' checked='checked' id='chat-toggle'> Toggle Chat
+                <input type='checkbox' data-bind='click: toggleChat' id='chat-toggle'> Toggle Chat
             </label>
         </div>
     </div>
@@ -49,6 +49,7 @@
 {% endblock content %}
 
 {% block sidebar %}
+<div data-bind='if: chatEnabled'>
 <h3>Chat</h3>
 <div class='chat-sidebar'>
     <div id='chat-div' class='chat messages'>
@@ -59,10 +60,11 @@
     <form id="chatform" class='form-inline'>
         <div class='input-prepend'>
             <span class='add-on'><i class='text-info icon-comment'></i></span>
-            <input class='chat-action' id='chatText' type="text" placeholder="Enter a chat message">
-            <button class='chat-action btn btn-primary' data-bind='click: submitChatMessage'>Send</button>
+            <input style='width: 81%;' class='chat-action' id='chatText' type="text" placeholder="Enter a chat message">
         </div>
+        <button class='chat-action btn btn-primary' data-bind='click: submitChatMessage'>Send</button>
     </form>
+</div>
 </div>
 
 {% endblock sidebar %}
@@ -214,6 +216,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
             model.showOtherGroup = function() {
                 model.shouldShowOtherGroup(! model.shouldShowOtherGroup());
             }
+            model.chatEnabled = ko.observable(false);
             model.shouldShowOtherGroup = ko.observable(false);
             model.harvestDecision = ko.observable(0);
             model.chatMessages = ko.observableArray([]);
@@ -263,6 +266,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
                 else {
                     $('.chat-action').addClass('disabled').attr('disabled', ! enabled);
                 }
+                model.chatEnabled(enabled);
                 return true;
             }
             return model;
