--- a/vcweb/core/templates/includes/experimenter.events.html
+++ b/vcweb/core/templates/includes/experimenter.events.html
@@ -19,7 +19,7 @@ function createMessageEvent(message, event_type) {
         event_type = "experimenter";
     }
     return JSON.stringify({
-        "message_type": event_type,
+        "event_type": event_type,
         "experimenter_id": {{request.user.experimenter.pk}},
         "experiment_id": {{experiment.pk}},
         "auth_token": "{{ request.user.experimenter.authentication_token }}",
